--- a/frontend/src/components/task/TaskItem.module.scss
+++ b/frontend/src/components/task/TaskItem.module.scss
@@ -53,3 +53,18 @@
     color: rgb(205, 205, 205);
   }
 }
+
+.editBtn {
+  display: inline-block;
+  border: 1px solid rgb(1, 54, 17);
+  padding: 0.5rem 1.5rem;
+  font-size: 1.6rem;
+  color: rgb(13, 167, 59);
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s ease background-color, 0.3s ease color;
+  &:hover {
+    background-color: rgb(142, 13, 39);
+    color: rgb(205, 205, 205);
+  }
+}
